syntax = "proto3";
package proto;

import "common.proto";


service Cluster {
	// add nodes to cluster
	rpc Join(ClusterJoinReq) returns (ClusterJoinResp);

	// remove nodes to cluster
	rpc Remove(ClusterRemoveReq) returns (ClusterRemoveResp);
}

message Node {
	string id = 1;
	string address = 2;
}

message ClusterJoinReq {
	repeated Node node = 1;
}

message ClusterJoinResp {
	Result result = 1;
	Leader leader = 2;
}

message ClusterRemoveReq {
	repeated Node node = 1;
}

message ClusterRemoveResp {
	Result result = 1;
	Leader leader = 2;
}
